--- a/ContaminationFlow_doc/settings.tex
+++ b/ContaminationFlow_doc/settings.tex
@@ -24,7 +24,7 @@
 \usepackage{pgfplotstable}
 \usepackage{booktabs}
 \usepackage[final]{microtype}
-\usepackage{caption}
+\usepackage[font=scriptsize]{caption}
 \usepackage[hidelinks]{hyperref} % hidelinks removes colored boxes around references and links
 
 \bibliography{bibliography}
