--- a/ContaminationFlow_doc/main.tex
+++ b/ContaminationFlow_doc/main.tex
@@ -5,7 +5,7 @@
 
 % TODO: change citation style in settings
 %\input{settings}
-\usepackage[margin=2.5cm]{geometry}
+\usepackage[left=1.5cm, right=1.5cm, top=2.5cm, bottom=2.5cm]{geometry}
 	%\addtolength{\oddsidemargin}{-.5cm}
 	%\addtolength{\evensidemargin}{-.5cm}
 	%\addtolength{\textwidth}{1cm}
