Changes from the last week:
Implemented the new PerformBounce() method
Adjusted the MPI_Bcast() to broadcast all elements together
Adjusted the usePCMethod
Corrected the internship report
Added the final presentation

--- a/Bericht/bericht.bib
+++ b/Bericht/bericht.bib
@@ -1,4 +1,4 @@
-@thesis{martonady,
+@thesis{marton,
       author="Ady, Marton",
       title= "{Monte Carlo simulations of ultra high vacuum and
                        synchrotron radiation for particle accelerators}",
@@ -24,7 +24,7 @@
   HAL_VERSION = {v1},
 }
 
-@article{Jiao,
+@article{jiao,
 	doi = {10.1088/1757-899x/611/1/012071},
 	url = {https://doi.org/10.1088/1757-899x/611/1/012071},
 	year = 2019,
@@ -39,7 +39,7 @@
 	abstract = {With the advancements of materials science and technology, organic materials found significant applications in aerospace industry. But under the orbital thermal and vacuum environment, organic materials can outgas and the outgassed products and induced environment often degraded performances of spacecraft or its subsystem. In this article, the typical impacts of outgassing environment on spacecraft are explained briefly. Then the outgassing theory, test method, identification of compounds and control measures were reviewed in detail. The need for transient and long-term outgassing model is discussed. The standard test methods of E595 and E1559 are compared. The promising new techniques such as infrared spectrometry and/or mass-spectrometry with thermogravimetric analysis is proposed for the identification of outgassed compounds. The vacuum bakeout and molecular absorber for outgassing control are reviewed and for the last more research work is needed.}
 }
 
-@article{molflow1,
+@article{molflow,
 author = {Kersevan, Roberto and Pons, J.-L},
 year = {2009},
 month = {08},
@@ -68,7 +68,7 @@ DOI={10.3389/fenrg.2020.00068},
 ISSN={2296-598X}   
 }
 
-@article{umweltsatellit,
+@article{zhang,
 author = {Zhang, Yun and Kerle, Norman},
 year = {2008},
 month = {01},
@@ -98,7 +98,7 @@ isbn = {978-0-415-42247-5}
 	file = {Satellite contamination - Lehrstuhl für Technische Elektrophysik:files/32/satellite-contamination.html:text/html},
 }
 
-@article{steelwater,
+@article{grinham,
 author = {Grinham, Rebecca and Chew, Andrew},
 year = {2017},
 month = {09},
