--- a/Bericht/bericht.tex
+++ b/Bericht/bericht.tex
@@ -159,7 +159,7 @@ Das Programm ContaminationFlow basiert auf Molflow+. Molflow+ benutzt die Monte-
 \end{figure}
 
 \paragraph{}
-ContaminationFlow erweitert Molfow+ mit einem Kontaminationsmodell, um die Kontamination an den kritischen Oberflächen der Satelliten abschätzen zu können. Infolgedessen wird zu den oben genannten relevanten Größen auch die Bedeckung ($\theta^*$) bzw. der Bedeckungsgrad ($\theta$) hinzugefügt. Mit der Bedeckung wird die Anzahl der Teilchen, die sich an einer Oberfläche der Geometrie befinden, ausgedrückt bzw. mit der Bedeckungsgrad wird die Anzahl der Schichten, die die Teilchen an einer Oberfläche bilden, ausgedrückt. Für die Modellierung der Kontamination wird eine Vereinfachung gemacht und es wird davon ausgegangen, dass alle Teilchen, die an einer Oberfläche adsorbieren, zuerst eine Kontaminationsschicht komplett füllen, bevor sie mit der nächsten Schicht weitermachen. Im Falle der Desorption können zuerst die oberste Teilchen desorbieren. Dieser Fall wird in der Abbildung~\ref{fig:model} illustriert. Die Satelliten können in ihrer Laufbahn für mehrere Jahre tätig sein~\cite{jiao}. Aus diesem Grund muss das Programm eine physikalische Zeit von mehreren Jahren simulieren. Um diese Simulation rechnerisch zu ermöglichen, werden die Zeitschritte exponentiell wachsend gewählt. Das Programm benutzt mehrere Prozesse. Somit können innerhalb der gleichen Rechenzeit mehr Testteilchen simuliert werden. Da die Monte-Carlo-Methode ein stochastisches Verfahren ist, wird die Genauigkeit der Ergebnisse mit der zunehmenden Anzahl der simulierten Testteilchen auch zunehmen~\cite{fenrg}. Die Prozesse in dem Programm werden in Hauptprozess und Subprozesse unterteilt. Die $K$ verschiedenen Subprozesse sind für die Simulation der Testteilchen zuständig. Sie benutzen keine gemeinsamen Variablen, das heißt, dass jeder Subprozess eine andere Kopie des Programms durchführt. Während der Simulation der Testteilchen in den Subprozessen werden bestimmten Zählern je nach dem geschehenen Ereignis gezählt. Diese Zähler werden dann für die Berechnung der physikalischen Größen gemäß den entsprechenden Formeln, die hier nicht erwähnt werden, zum Hauptprozess geschickt. Es soll sich beachtet werden, dass in den Subprozessen im Allgemeinen nicht so viele Teilchen, wie sie sich in einem realen System befinden, simuliert werden können. Deswegen wird angenommen, dass jedes simulierte Teilchen mehrere realen Teilchen darstellt. Der Faktor, der dieses Verhältnis beschreibt, wird $K_{real/virtual}$ genannt. Am Ende der Subprozesssimulationen werden ihre Zählerwerte mit diesem Faktor multipliziert, um auf dem realen Ergebnis zu kommen. Der Hauptprozess dient für die Steuerung des Programms sowie für die Akkumulation (Summierung) der in den Subprozesssimulationen erhaltenen Zählerwerte. Am Anfang des Programms werden die Anfangsbedeckungen sowie die Geometrieparameter von dem Hauptprozess zu den Subprozessen geschickt. Am Ende der Subprozesssimulationen werden die erhaltenen Zählerwerte mit dem Faktor $K_{real/virtual}$ skaliert. Im Falle der Bedeckung wird zuerst von ihrem Zählerwert der Bedeckung am Anfang des Zeitschritts subtrahiert und diese Differenz wird mit dem Faktor skaliert. Letztlich wird die skalierte Differenz zur Bedeckung am Anfang des Zeitschritts addiert. Danach wird der tatsächliche Wert der oben genannten physikalischen Größen für den nächsten Zeitpunkt berechnet. Schließlich werden die Subprozessen mit den neu berechneten Größen aktualisiert und das Programm macht mit der nächsten Iteration weiter.
+ContaminationFlow erweitert Molfow+ mit einem Kontaminationsmodell, um die Kontamination an den kritischen Oberflächen der Satelliten abschätzen zu können. Infolgedessen wird zu den oben genannten relevanten Größen auch die Bedeckung ($\theta^*$) bzw. der Bedeckungsgrad ($\theta$) hinzugefügt. Mit der Bedeckung wird die Anzahl der Teilchen, die sich an einer Oberfläche der Geometrie befinden, ausgedrückt bzw. mit der Bedeckungsgrad wird die Anzahl der Schichten, die die Teilchen an einer Oberfläche bilden, ausgedrückt. Für die Modellierung der Kontamination wird eine Vereinfachung gemacht und es wird davon ausgegangen, dass alle Teilchen, die an einer Oberfläche adsorbieren, zuerst eine Kontaminationsschicht komplett füllen, bevor sie mit der nächsten Schicht weitermachen. Im Falle der Desorption können zuerst die oberste Teilchen desorbieren. Dieser Fall wird in der Abbildung~\ref{fig:model} illustriert. Die Satelliten können in ihrer Laufbahn für mehrere Jahre tätig sein~\cite{jiao}. Aus diesem Grund muss das Programm eine physikalische Zeit von mehreren Jahren simulieren. Um diese Simulation rechnerisch zu ermöglichen, werden die Zeitschritte exponentiell wachsend gewählt. Das Programm benutzt mehrere Prozesse. Somit können innerhalb der gleichen Rechenzeit mehr Testteilchen simuliert werden. Da die Monte-Carlo-Methode ein stochastisches Verfahren ist, wird die Genauigkeit der Ergebnisse mit der zunehmenden Anzahl der simulierten Testteilchen auch zunehmen~\cite{fenrg}. Die Prozesse in dem Programm werden in Hauptprozess und Subprozesse unterteilt. Die $K$ verschiedenen Subprozesse sind für die Simulation der Testteilchen zuständig. Sie benutzen keine gemeinsamen Variablen, das heißt, dass jeder Subprozess eine andere Kopie des Programms durchführt. Während der Simulation der Testteilchen in den Subprozessen werden bestimmten Zählern je nach dem geschehenen Ereignis gezählt. Diese Zähler werden dann für die Berechnung der physikalischen Größen gemäß den entsprechenden Formeln, die hier nicht erwähnt werden, zum Hauptprozess geschickt. Es soll beachtet werden, dass in den Subprozessen im Allgemeinen nicht so viele Teilchen, wie sie sich in einem realen System befinden, simuliert werden können. Deswegen wird angenommen, dass jedes simulierte Teilchen mehrere realen Teilchen darstellt. Der Faktor, der dieses Verhältnis beschreibt, wird $K_{real/virtual}$ genannt. Am Ende der Subprozesssimulationen werden ihre Zählerwerte mit diesem Faktor multipliziert, um auf dem realen Ergebnis zu kommen. Der Hauptprozess dient für die Steuerung des Programms sowie für die Akkumulation (Summierung) der in den Subprozesssimulationen erhaltenen Zählerwerte. Am Anfang des Programms werden die Anfangsbedeckungen sowie die Geometrieparameter von dem Hauptprozess zu den Subprozessen geschickt. Am Ende der Subprozesssimulationen werden die erhaltenen Zählerwerte mit dem Faktor $K_{real/virtual}$ skaliert. Danach wird der tatsächliche Wert der oben genannten physikalischen Größen für den nächsten Zeitpunkt berechnet. Im Falle der Bedeckung wird der Zählerwert zuerst vom Zählerwert am Anfang des Zeitschritts subtrahiert und diese Differenz wird mit dem Faktor skaliert. Letztlich wird die skalierte Differenz zur Bedeckung am Anfang des Zeitschritts addiert. Schließlich werden die Subprozessen mit den neu berechneten Größen aktualisiert und das Programm macht mit der nächsten Iteration weiter.
 
 \begin{figure}[t]
 \centering
@@ -170,7 +170,7 @@ ContaminationFlow erweitert Molfow+ mit einem Kontaminationsmodell, um die Konta
 
 \section{Simulation eines Testteilchens} \label{section:molflow}
 \paragraph{}
-In der Abbildung~\ref{fig:simulation} wird die Simulation eines Testteilchens für eine Schrittweite von \SI{10}{Stunden} grob skizziert. Dabei wurden die Geometrie und ihre Bedeckungsgrade beispielhaft gewählt. Am Anfang wird ein Testteilchen in einer zufällig gewählten Oberfläche (in der Abbildung ist sie die Oberfläche $\Sigma_0$) generiert. Die Wahrscheinlichkeit für das Wählen einer bestimmten Oberfläche hängt von ihrer Desorption, die von ihrer Bedeckung abhängt, und von ihrer Ausgasung ab. Nach der Wahl der Oberfläche wird der Startpunkt des Testteilchens an dieser Oberfläche ausgesucht. Die Zufallsvariablen für das Aussuchen eines Startpunkts sind gleichverteilt. Das heißt, jeder Punkt kann mit gleicher Wahrscheinlichkeit gewählt werden. Anschließend wird abhängig von der Desorption und von der Ausgasung der gewählten Oberfläche zufällig entschieden, ob das generierte Testteilchen durch Ausgasung oder durch Desorption entsteht. Diese Unterscheidung ist wichtig, denn im Falle einer Desorption wird davon ausgegangen, dass das Testteilchen aus der Kontaminationsschicht stammt und der Zähler für die Bedeckung der Oberfläche wird um eins erniedrigt. Im Falle der Ausgasung wird angenommen, dass das Teilchen außerhalb des Systems stammt und der Zähler für die Bedeckung bleibt gleich. Nach dieser Unterscheidung wird noch die Verweilzeit des Testteilchens an der Oberfläche zu seiner gesamten Flugzeit addiert und damit die Startzeit des Teilchens bestimmt. In diesem Bericht wird auf die Berechnung der Startzeit nicht eingegangen, weil sie komplex ist. Jedoch kann angenommen werden, dass für einen Bedeckungsgrad größer als zwei jedes desorbierende Teilchen an anderen Adsorbatteilchen gebunden ist. Damit berechnet sich die Startzeit mit einer kurzen Verweilzeit. Wenn der Bedeckungsgrad kleiner als eins ist, wird angenommen, dass jedes desorbierende Teilchen an dem Adsorbens gebunden ist. Damit berechnet sich die Startzeit mit einer langen Verweilzeit. Ansonsten wird zufällig entschieden, ob das desorbierende Teilchen mit dem Adsorbens oder mit einem Adsorbat gebunden ist. Denn bei einem Bedeckungsgrad zwischen eins und zwei sind die beiden Bindungstypen des desorbierenden Teilchen möglich. Letztlich wird die Richtung des Testteilchens nach dem Knudsen-Kosinus-Gesetz und die Geschwindigkeit des Teilchens nach der Maxwell-Boltzmann-Verteilung zufällig entschieden. Als Nächstes findet der Raytracing-Algorithmus die nächste Oberfläche, an der das Testteilchen stoßen wird. Die Zeit, die unterwegs vergeht, wird zu der Flugzeit des Testteilchens addiert. Nach dem Stoß mit der Oberfläche verweilt das Testteilchen für eine bestimmte Zeit. Wie es in der Abbildung gezeigt wird, hängt die Verweilzeit von dem Bedeckungsgrad der Oberfläche ab. Bei einem Bedeckungsgrad größer als eins verbindet das Testteilchen mit einem Adsorbat. Dagegen wird bei einem Bedeckungsgrad kleiner als eins zufällig entschieden, ob das Teilchen mit dem Adsorbens (Oberfläche) oder mit einem Adsorbat verbindet. Wenn das Testteilchen direkt mit der Oberfläche verbindet, dann wird die Bindungsenergie zwischen dem Adsorbens und dem Teilchen ($E_{de}$) als die Aktivierungsenergie benutzt. Im Falle der Bindung zwischen einem Wassermolekül und Edelstahl korrespondiert ihre Bindungsenergie (\SI{1}{\electronvolt})~\cite{grinham} bei einer Temperatur von \SI{20}{\celsius} zu einer mittleren Verweilzeit ($\bar{\tau}$) von ca. \SI{7}{Stunden}. Für kurze Schrittweiten wäre die Annahme, dass das Testteilchen an der Oberfläche stecken bleibt, nicht falsch. Anderseits, falls das Testteilchen mit einem Adsorbat verbindet, dann wird die Verdampfungsenthalpie ($H_{vap}$) als die Aktivierungsenergie benutzt. Im Falle einer Bindung zwischen zwei Wassermolekülen, korrespondiert ihre Bindungsenergie (\SI{0.5}{\electronvolt})~\cite{grinham} bei einer Temperatur von \SI{20}{\celsius} zu einer mittleren Verweilzeit von ca. \SI{63}{\micro\s}. Das heißt, dass das Testteilchen nach einer sehr kurzen Zeit wieder frei wird. Nach dem Addieren der Verweilzeit zu der Flugzeit des Testteilchens werden wieder seine Richtung und seine Geschwindigkeit entschieden. Der gleiche Prozess wiederholt sich, bis die Flugzeit des Testteilchens größer als die Schrittweite ist. In diesem Fall endet seine Simulation. Für den nächsten Zeitpunkt adsorbiert es an der Oberfläche, an der es gerade befindet (in der Abbildung ist sie die Oberfläche $\Sigma_8$) und der Zähler für die Bedeckung dieser Oberfläche erhöht um eins. Anschließend wird mit der Simulation eines anderen Testteilchens weitergemacht, bis es genug Testteilchen simuliert wurden.
+In der Abbildung~\ref{fig:simulation} wird die Simulation eines Testteilchens für eine Schrittweite von \SI{10}{Stunden} grob skizziert. Dabei wurden die Geometrie und ihre Bedeckungsgrade beispielhaft gewählt. Am Anfang wird ein Testteilchen in einer zufällig gewählten Oberfläche (in der Abbildung ist sie die Oberfläche $\Sigma_0$) generiert. Die Wahrscheinlichkeit für das Wählen einer bestimmten Oberfläche hängt von ihrer Desorption, die von ihrer Bedeckung abhängt, und von ihrer Ausgasung ab. Nach der Wahl der Oberfläche wird der Startpunkt des Testteilchens an dieser Oberfläche ausgesucht. Die Zufallsvariablen für das Aussuchen eines Startpunkts sind gleichverteilt. Das heißt, jeder Punkt kann mit gleicher Wahrscheinlichkeit gewählt werden. Anschließend wird abhängig von der Desorption und von der Ausgasung der gewählten Oberfläche zufällig entschieden, ob das generierte Testteilchen durch Ausgasung oder durch Desorption entsteht. Diese Unterscheidung ist wichtig, denn im Falle einer Desorption wird davon ausgegangen, dass das Testteilchen aus der Kontaminationsschicht stammt und der Zähler für die Bedeckung der Oberfläche wird um eins erniedrigt. Im Falle der Ausgasung wird angenommen, dass das Teilchen außerhalb des Systems stammt und der Zähler für die Bedeckung bleibt gleich. Nach dieser Unterscheidung wird noch die Verweilzeit des Testteilchens an der Oberfläche zu seiner gesamten Flugzeit addiert und damit die Startzeit des Teilchens bestimmt. In diesem Bericht wird auf die Berechnung der Startzeit nicht eingegangen, weil sie komplex ist. Jedoch kann angenommen werden, dass für einen Bedeckungsgrad größer als zwei jedes desorbierende Teilchen an anderen Adsorbat gebunden ist. Damit berechnet sich die Startzeit mit einer kurzen Verweilzeit. Wenn der Bedeckungsgrad kleiner als eins ist, wird angenommen, dass jedes desorbierende Teilchen an dem Adsorbens gebunden ist. Damit berechnet sich die Startzeit mit einer langen Verweilzeit. Ansonsten wird zufällig entschieden, ob das desorbierende Teilchen mit dem Adsorbens oder mit dem Adsorbat gebunden ist. Denn bei einem Bedeckungsgrad zwischen eins und zwei sind die beiden Bindungstypen des desorbierenden Teilchen möglich. Letztlich wird die Richtung des Testteilchens nach dem Knudsen-Kosinus-Gesetz und die Geschwindigkeit des Teilchens nach der Maxwell-Boltzmann-Verteilung zufällig entschieden. Als Nächstes findet der Raytracing-Algorithmus die nächste Oberfläche, an der das Testteilchen stoßen wird. Die Zeit, die unterwegs vergeht, wird zu der Flugzeit des Testteilchens addiert. Nach dem Stoß mit der Oberfläche verweilt das Testteilchen für eine bestimmte Zeit. Wie es in der Abbildung gezeigt wird, hängt die Verweilzeit von dem Bedeckungsgrad der Oberfläche ab. Bei einem Bedeckungsgrad größer als eins bindet das Testteilchen mit dem Adsorbat. Dagegen wird bei einem Bedeckungsgrad kleiner als eins zufällig entschieden, ob das Teilchen mit dem Adsorbens (Oberfläche) oder mit dem Adsorbat bindet. Wenn das Testteilchen direkt mit der Oberfläche bindet, dann wird die Bindungsenergie zwischen dem Adsorbens und dem Teilchen ($E_{de}$) als die Aktivierungsenergie benutzt. Im Falle der Bindung zwischen einem Wassermolekül und Edelstahl korrespondiert ihre Bindungsenergie (\SI{1}{\electronvolt})~\cite{grinham} bei einer Temperatur von \SI{20}{\celsius} zu einer mittleren Verweilzeit ($\bar{\tau}$) von ca. \SI{7}{Stunden}. Für kurze Schrittweiten wäre die Annahme, dass das Testteilchen an der Oberfläche stecken bleibt, nicht falsch. Anderseits, falls das Testteilchen mit dem Adsorbat bindet, dann wird die Verdampfungsenthalpie ($H_{vap}$) als die Aktivierungsenergie benutzt. Im Falle einer Bindung zwischen zwei Wassermolekülen, korrespondiert ihre Bindungsenergie (\SI{0.5}{\electronvolt})~\cite{grinham} bei einer Temperatur von \SI{20}{\celsius} zu einer mittleren Verweilzeit von ca. \SI{63}{\micro\s}. Das heißt, dass das Testteilchen nach einer sehr kurzen Zeit wieder frei wird. Nach dem Addieren der Verweilzeit zu der Flugzeit des Testteilchens werden wieder seine Richtung und seine Geschwindigkeit entschieden. Der gleiche Prozess wiederholt sich, bis die Flugzeit des Testteilchens größer als die Schrittweite ist. In diesem Fall endet seine Simulation. Für den nächsten Zeitpunkt adsorbiert es an der Oberfläche, an der es gerade befindet (in der Abbildung ist sie die Oberfläche $\Sigma_8$) und der Zähler für die Bedeckung dieser Oberfläche erhöht um eins. Anschließend wird mit der Simulation eines anderen Testteilchens weitergemacht, bis es genug Testteilchen simuliert wurden.
 
 \chapter{Durchführung} \label{chap:durchfuehrung}
 \paragraph{}
@@ -186,7 +186,7 @@ In diesem Kapitel geht es um die Implementierung des Prädiktor-Korrektor-Verfa\
 \end{figure}
 
 \paragraph{}
-Für die Darstellung des Oszillationsproblems wird eine einfache Würfelgeometrie betrachtet, wobei der Anfangsbedeckungsgrad der 0. Oberfläche 5.0 ist und die Anfangsbedeckungsgrade der anderen Oberflächen 0 sind. Es wird mindestens \SI{e4}{} Testteilchen simuliert. Außerdem gasen keine Teilchen aus den Oberflächen aus. In diesem Fall ist zu erwarten, dass die Bedeckungsgrade aller Oberflächen im Gleichgewicht auf $0.8\overline{3}$ annähern. Dieser Fall ist in der Abbildung~\ref{fig:oscillation}~auf~der~Seite~\pageref{fig:oscillation} zu sehen. Die Abbildung zeigt den Bedeckungsgrad der 0. Oberfläche abhängig der Zeit. Hierbei wird eine logarithmische Zeitachse gewählt und die Simulation wird für zwei Jahren mit 1000 Iterationen ausgeführt. Daneben wird auf die zeitabhängigen Bedeckungsgrade der anderen Oberflächen nicht eingegangen, weil sie analog zur 0. Oberfläche sind. Die Abbildung zeigt, dass ab dem Zeitpunkt \SI{e6}{\s}, der zum 116. Tag des simulierten Systems korrespondiert, der Bedeckungsgrad stark oszilliert. Dieses Verhalten ist unphysikalisch. Die Schrittweite in diesem Zeitpunkt beträgt ungefähr \SI{18}{Stunden}. Die Ursache für dieses Verhalten ist nicht einfach zu erklären. Die einfachste Begründung wäre, dass die Monte-Carlo-Methode seine Ursache war, weil sie ein stochastisches Verfahren ist und die Ergebnisse immer eine Ungenauigkeit enthalten. Da am Ende der Subprozesssimulationen die Ergebnisse noch mit dem Faktor $K_{real/virtual}$ skaliert werden, werden auch die Ungenauigkeiten mitskaliert. Aus diesem Grund ist zu überlegen, dass diese Sache der Anlass der Oszillation ist. Aber in diesem Fall ist zu erwarten, dass das Problem mit der Zunahme der Stichprobe gelöst wird. Jedoch passiert das tatsächlich nicht. In der Tat bleibt der Fehler in der gleichen Größenordnung, wenn die Anzahl der simulierten Testteilchen verzehnfacht (\SI{e5} {Testteilchen}) oder verhundertfacht (\SI{e6}{Testteilchen}) wird. Diese Angelegenheit legt die Vermutung nahe, dass ein Effekt gibt, die die homogene Verteilung der Testteilchen in dem System verhindert. In dem betrachteten Beispiel kann davon ausgegangen werden, dass die Schrittweite in dem Zeitpunkt des Oszillationsbeginns so lang ist, dass ungefähr alle Teilchen an den Oberflächen desorbieren. Wenn aber eine Oberfläche wegen der statistischen Ungenauigkeiten ein bisschen größere Bedeckung hat, dann adsorbiert sie weniges Teilchen. Wogegen, wenn eine Oberfläche ein bisschen niedrigere Bedeckung hat, dann adsorbiert sie mehr Teilchen. In großen Schrittweiten führt diese Asymmetrie irgendwie zu einem selbstverstärkenden Effekt, sodass der in der Abbildung illustrierte Verhalten beobachtet wird. Übrigens ist es möglich, dass die Bedeckung wegen der Oszillation negativ ist. In diesem Fall wird die negative Bedeckung mit 0 ersetzt. Das führt zur Zunahme der Gesamtteilchenzahl in dem System. Die Zunahme der Gesamtteilchenzahl kann mit der Erhöhung der Anzahl der Testteilchen verlangsamt werden.
+Für die Darstellung des Oszillationsproblems wird eine einfache Würfelgeometrie betrachtet, wobei der Anfangsbedeckungsgrad der 0. Oberfläche 5.0 ist und die Anfangsbedeckungsgrade der anderen Oberflächen 0 sind. Es wird mindestens \SI{e4}{} Testteilchen simuliert. Außerdem gasen keine Teilchen aus den Oberflächen aus. In diesem Fall ist zu erwarten, dass die Bedeckungsgrade aller Oberflächen im Gleichgewicht auf $0.8\overline{3}$ annähern. Dieser Fall ist in der Abbildung~\ref{fig:oscillation}~auf~der~Seite~\pageref{fig:oscillation} zu sehen. Die Abbildung zeigt den Bedeckungsgrad der 0. Oberfläche abhängig der Zeit. Hierbei wird eine logarithmische Zeitachse gewählt und die Simulation wird für zwei Jahren mit 1000 Iterationen ausgeführt. Daneben wird auf die zeitabhängigen Bedeckungsgrade der anderen Oberflächen nicht eingegangen, weil sie analog zur 0. Oberfläche sind. Die Abbildung zeigt, dass ab dem Zeitpunkt \SI{e6}{\s}, der zum 116. Tag des simulierten Systems korrespondiert, der Bedeckungsgrad stark oszilliert. Dieses Verhalten ist unphysikalisch. Die Schrittweite in diesem Zeitpunkt beträgt ungefähr \SI{18}{Stunden}. Die Ursache für dieses Verhalten ist nicht einfach zu erklären. Die einfachste Begründung wäre, dass die Monte-Carlo-Methode seine Ursache war, weil sie ein stochastisches Verfahren ist und die Ergebnisse immer eine Ungenauigkeit enthalten. Da am Ende der Subprozesssimulationen die Ergebnisse noch mit dem Faktor $K_{real/virtual}$ skaliert werden, werden auch die Ungenauigkeiten mitskaliert. Aus diesem Grund ist zu überlegen, dass diese Sache der Anlass der Oszillation ist. Aber in diesem Fall ist zu erwarten, dass das Problem mit der Zunahme der Stichprobe gelöst wird. Jedoch passiert das tatsächlich nicht. In der Tat bleibt der Fehler in der gleichen Größenordnung, wenn die Anzahl der simulierten Testteilchen verzehnfacht (\SI{e5} {Testteilchen}) oder verhundertfacht (\SI{e6}{Testteilchen}) wird. Diese Angelegenheit legt die Vermutung nahe, dass ein Effekt gibt, die die homogene Verteilung der Testteilchen in dem System verhindert. In dem betrachteten Beispiel kann davon ausgegangen werden, dass die Schrittweite in dem Zeitpunkt des Oszillationsbeginns so lang ist, dass ungefähr alle Teilchen an den Oberflächen desorbieren. Wenn aber eine Oberfläche wegen der statistischen Ungenauigkeiten ein bisschen größere Bedeckung hat, dann adsorbiert sie weniger Teilchen. Wogegen, wenn eine Oberfläche ein bisschen niedrigere Bedeckung hat, dann adsorbiert sie mehr Teilchen. In großen Schrittweiten führt diese Asymmetrie irgendwie zu einem selbstverstärkenden Effekt, sodass der in der Abbildung illustrierte Verhalten beobachtet wird. Übrigens ist es möglich, dass die Bedeckung wegen der Oszillation negativ ist. In diesem Fall wird die negative Bedeckung mit 0 ersetzt. Das führt zur Zunahme der Gesamtteilchenzahl in dem System. Die Zunahme der Gesamtteilchenzahl kann mit der Erhöhung der Anzahl der Testteilchen verlangsamt werden.
 
 \section{Motivation für das Prädiktor-Korrektor-Verfahren} \label{section:PK}
 
@@ -391,14 +391,14 @@ In diesem Kapitel werden die Simulationsergebnisse gezeigt und damit die zwei ve
 \end{figure}
 
 \paragraph{}
-Alle Simulationen wurden in einer Würfelgeometrie, die in der Abbildung~\ref{fig:cube} skizziert ist, durchgeführt. Die Wahl so einer einfachen Geometrie ermöglicht, dass die Ergebnisse im Voraus sehr einfach analytisch berechnet werden kann, um sie mit den Simulationsergebnissen zu vergleichen. Die Simulationszeit beträgt 2 Jahre und es werden 1000 Iterationen benutzt. Pro Iteration werden mindestens \SI{e4}{Testteilchen} simuliert. Als der Anfangsbedeckungsgrad der 0. Oberfläche wird der Wert $\theta_0$, der größer als 0 ist, gewählt. Wogegen die Anfangsbedeckungsgrade der anderen Oberflächen als 0 gewählt werden. Es werden die Simulationsergebnisse von drei verschiedenen Anfangswertproblemen gezeigt. Der Anfangsbedeckungsgrad der 0. Oberfläche wird in dem ersten Anfangswertproblem auf 2.0, in dem zweiten Anfangswertproblem auf 3.5 und in dem letzten Anfangswertproblem auf 5.0 gesetzt. Die Temperatur aller Oberflächen beträgt \SI{20}{\celsius}. Außerdem gast keine Oberfläche aus. Das heißt, die Gesamtteilchenzahl in dem System bleibt erhalten. Folglich wird erwartet, dass der Bedeckungsgrad aller Oberflächen im Gleichgewicht $\frac{\theta_0}{6}$ wird. Für diese Geometrie ist die Wahl eines Anfangsbedeckungsgrads größer als 6.0 ist nicht zielführend, weil in diesem Fall alle Oberflächen im Gleichgewicht einen Bedeckungsgrad mehr als eins haben. Wie es am Ende des Abschnitts~\ref{section:implement} erwähnt wurde, führt diese Sache gewissermaßen zum Einfrieren der Simulation. Für die Darstellung der Simulationsergebnisse werden zwei Graphen benutzt. Der erste Graph mit der blauen Kurve zeigt immer den Bedeckungsgrad der 0. Oberfläche, abhängig von der Zeit. Unterdessen ist die Zeitachse logarithmisch skaliert. Der zweite Graph mit der roten Kurve zeigt immer den relativen Fehler (die Abweichung vom Sollwert) im Prozent abhängig von der Zeit. Dabei ist die Zeitachse linear skaliert und es wird ab dem Zeitpunkt, an dem die Simulation konvergiert, betrachtet. Da in dem Graph der relative Fehler betrachtet wird, können die Simulationsergebnisse der anderen Anfangswertprobleme miteinander verglichen werden. Außerdem werden in den Graphen immer die Simulationsergebnisse der 0. Oberfläche gezeigt, denn im Gleichgewicht verhalten sich die anderen Oberflächen analog zur 0. Oberfläche und ihre Simulationsergebnisse zu zeigen wäre unnötig. Letztlich werden die wichtigsten Resultate aus den Simulationen in der Tabelle unter den Graphen dargestellt. Diese Resultate sind die Schrittweite, ab der der relative Fehler 1 \% bzw. 10 \% überschreitet und der maximale relative Fehler. Sie wurden natürlich aus den Simulationsergebnissen aller Oberflächen gesammelt.
+Alle Simulationen wurden in einer Würfelgeometrie, die in der Abbildung~\ref{fig:cube} skizziert ist, durchgeführt. Die Wahl so einer einfachen Geometrie ermöglicht, dass die Ergebnisse im Voraus sehr einfach analytisch berechnet werden kann, um sie mit den Simulationsergebnissen zu vergleichen. Die Simulationszeit beträgt 2 Jahre und es werden 1000 Iterationen benutzt. Pro Iteration werden mindestens \SI{e4}{Testteilchen} simuliert. Als der Anfangsbedeckungsgrad der 0. Oberfläche wird der Wert $\theta_0$, der größer als 0 ist, gewählt. Wogegen die Anfangsbedeckungsgrade der anderen Oberflächen als 0 gewählt werden. Es werden die Simulationsergebnisse von drei verschiedenen Anfangswertproblemen gezeigt. Der Anfangsbedeckungsgrad der 0. Oberfläche wird in dem ersten Anfangswertproblem auf 2.0, in dem zweiten Anfangswertproblem auf 3.5 und in dem letzten Anfangswertproblem auf 5.0 gesetzt. Die Temperatur aller Oberflächen beträgt \SI{20}{\celsius}. Außerdem gast keine Oberfläche aus. Das heißt, die Gesamtteilchenzahl in dem System bleibt erhalten. Folglich wird erwartet, dass der Bedeckungsgrad aller Oberflächen im Gleichgewicht $\frac{\theta_0}{6}$ wird. Für diese Geometrie ist die Wahl eines Anfangsbedeckungsgrads größer als 6.0 ist nicht zielführend, weil in diesem Fall alle Oberflächen im Gleichgewicht einen Bedeckungsgrad größer als eins haben. Wie am Ende des Abschnitts~\ref{section:implement} erwähnt, führt diese Sache gewissermaßen zum Einfrieren der Simulation. Für die Darstellung der Simulationsergebnisse werden zwei Graphen benutzt. Der erste Graph mit der blauen Kurve zeigt immer den Bedeckungsgrad der 0. Oberfläche, abhängig von der Zeit. Unterdessen ist die Zeitachse logarithmisch skaliert. Der zweite Graph mit der roten Kurve zeigt immer den relativen Fehler (die Abweichung vom Sollwert) im Prozent abhängig von der Zeit. Dabei ist die Zeitachse linear skaliert und es wird ab dem Zeitpunkt, an dem die Simulation konvergiert, betrachtet. Da in dem Graph der relative Fehler betrachtet wird, können die Simulationsergebnisse der anderen Anfangswertprobleme miteinander verglichen werden. Außerdem werden in den Graphen immer die Simulationsergebnisse der 0. Oberfläche gezeigt, denn im Gleichgewicht verhalten sich die anderen Oberflächen analog zur 0. Oberfläche und ihre Simulationsergebnisse zu zeigen wäre unnötig. Letztlich werden die wichtigsten Resultate aus den Simulationen in der Tabelle unter den Graphen dargestellt. Diese Resultate sind die Schrittweite, ab der der relative Fehler 1 \% bzw. 10 \% überschreitet und der maximale relative Fehler. Sie wurden natürlich aus den Simulationsergebnissen aller Oberflächen gesammelt.
 
 \section{Simulationsergebnisse} \label{section:simuergebnisse}
 \paragraph{}
 Die Abbildung~\ref{fig:figure_2.0}~auf~der~Seite~\pageref{fig:figure_2.0} illustriert die Simulationsergebnisse des vorherigen Verfahrens und der zwei verschiedenen Ansätze des Prädiktor-Korrektor-Verfahrens bei einem Anfangsbedeckungsgrad von 2.0 für die 0. Oberfläche und 0 für die anderen Oberflächen. Im linken Graph ist zu sehen, dass der Bedeckungsgrad in der kurzen Zeit auf eins fällt. Danach fällt er ziemlich langsam auf den Sollwert. Diese Tatsache ist mit den unterschiedlichen mittleren Verweilzeiten einer Wasser-Wasser-Bindung (\SI{63}{\micro\s}) und einer Wasser-Edelstahl-Bindung (\SI{7}{Stunden}) zu erklären. In allen Simulationen ist das Rauschen ab dem Zeitpunkt von ungefähr \SI{e6}{\s} erkennbar. Hierbei war die Schrittweite ca. \SI{3}{Stunden}. Daneben ist in den Graphen zu merken und in der Tabelle unter den Graphen zu bestätigen, dass die beiden Ansätze des Prädiktor-Korrektor-Verfahrens das vorherige Verfahren verbessern. Jedoch ist die Verbesserung des ersten Ansatzes vernachlässigbar klein, wogegen die Verbesserung des zweiten Ansatzes bemerkbar ist. Dabei konnte die Schrittweite dreifach erhöht werden, trotzdem blieb der Fehler unter 1 \%. Übrigens ist der maximale Fehler stets unter 5 \%. Die Striche unter dem 10 \% Fehler bedeuten, dass der relative Fehler 10 \% nie überschreitet. Deshalb kann schlussgefolgert werden, dass die Ergebnisse des vorherigen Verfahrens sogar in den größeren Zeitschritten tolerierbar sind. Infolgedessen kann die Anwendung des Prädiktor-Korrektor-Verfahrens verzichtet werden, um Rechenzeit zu sparen.
 
 \paragraph{}
-Die Abbildung~\ref{fig:figure_3.5}~auf~der~Seite~\pageref{fig:figure_3.5} stellt die Simulationsergebnisse bei einem Anfangsbedeckungsgrad von 3.5 für die 0. Oberfläche und 0 für die anderen Oberflächen dar. Hier ist deutliche Verbesserung des Prädiktor-Korrektor-Verfahrens gegenüber dem vorherigen Verfahren bemerkbar. Für große Schrittweiten oszillieren die Simulationsergebnisse des vorherigen Verfahrens so stark und dabei entstandener Fehler ist so groß, dass sie nicht mehr akzeptierbar sind. Demgegenüber sind die Ergebnisse der beiden Ansätzen des Prädiktor-Korrektor-Verfahrens deutlich besser, wobei der zweite Ansatz noch besser ist. Diese Feststellung kann in der Tabelle unter den Graphen bestätigt werden. Obwohl die Zunahme der Schrittweite, ab der der Fehler 1 \% überschreitet, nicht groß ist, ist sie bei dem 10 \% Fehler deutlich sichtbar. Bei dem zweiten Ansatz überschreitet der Fehler sogar 10 \% nicht und ist stets unter 5 \%. Als Schlussfolgerung kann gesagt werden, dass die Anwendung des Prädiktor-Korrektor-Verfahrens für dieses Anfangswertproblem lohnt sich.
+Die Abbildung~\ref{fig:figure_3.5}~auf~der~Seite~\pageref{fig:figure_3.5} stellt die Simulationsergebnisse bei einem Anfangsbedeckungsgrad von 3.5 für die 0. Oberfläche und 0 für die anderen Oberflächen dar. Hier ist deutliche Verbesserung des Prädiktor-Korrektor-Verfahrens gegenüber dem vorherigen Verfahren bemerkbar. Für große Schrittweiten oszillieren die Simulationsergebnisse des vorherigen Verfahrens so stark und dabei entstandener Fehler ist so groß, dass sie nicht mehr akzeptierbar sind. Demgegenüber sind die Ergebnisse der beiden Ansätzen des Prädiktor-Korrektor-Verfahrens deutlich besser, wobei der zweite Ansatz noch besser ist. Diese Feststellung kann in der Tabelle unter den Graphen bestätigt werden. Obwohl die Zunahme der Schrittweite, ab der der Fehler 1 \% überschreitet, nicht groß ist, ist sie bei dem 10 \% Fehler deutlich sichtbar. Bei dem zweiten Ansatz überschreitet der Fehler sogar 10 \% nicht und ist stets unter 5 \%. Als Schlussfolgerung kann gesagt werden, dass sich die Anwendung des Prädiktor-Korrektor-Verfahrens für dieses Anfangswertproblem lohnt.
 
 \paragraph{}
 Letztlich zeigt die Abbildung~\ref{fig:figure_5.0}~auf~der~Seite~\pageref{fig:figure_5.0} die Simulationsergebnisse bei einem Anfangsbedeckungsgrad von 5.0 für die 0. Oberfläche und 0 für die anderen Oberflächen. In diesem Fall hilft die Anwendung des Prädiktor-Korrektor-Verfahrens nicht viel, weil die Simulationsergebnisse der beiden Ansätze auch oszillieren, wobei sie in dem zweiten Ansatz ein bisschen besser sind, weil der Fehler meistens unter 100 \% bleibt. Außerdem ist die Schrittweite des 10 \% Fehlers bei dem Prädiktor-Korrektor-Verfahren ist zwar verdoppelt, aber unter Berücksichtigung der verdoppelten Simulationszeit bringt das auch nicht viel. Es kann schlussgefolgert werden, dass in bestimmten Anfangsproblemen sogar das Prädiktor-Korrektor-Verfahren die Oszillation nicht verhindern kann. Die Simulationsergebnisse mit verschiedenen Anfangsbedeckungsgraden zeigen, dass das vorherige Verfahren ab einem Anfangsbedeckungsgrad von 3.0, der erste Ansatz des Prädiktor-Korrektor-Verfahrens ab 4.0 und der zweite Ansatz ab 4.5, wegen der starken Oszillation, unvernünftige Ergebnisse geben. Außerdem wurde festgestellt, dass das Prädiktor-Korrektor-Verfahren mit mehreren Korrektor-Schritten für dieses Anfangswertproblem keine signifikante Verbesserung gegenüber dem Verfahren mit einem Korrektor-Schritt bringt.
@@ -498,9 +498,9 @@ P.K. Verfahren v2 & 13860 s & 22560 s & 174.84 \% \\
 
 \chapter{Abschluss und Ausblick} \label{chap:abschluss}
 \paragraph{}
-In dieser Ingenieurpraxis wurde die Implementierung des Prädiktor-Korrektor-Verfahrens in dem Programm „ContaminationFlow“ für die Berechnung der Bedeckung erklärt. Dazu wurde hauptsächlich auf zwei verschiedenen Implementierungsansätzen eingegangen. Die Simulationsergebnisse zeigten sich, dass das Prädiktor-Korrektor-Verfahren für manche Anfangswertprobleme eine deutliche Verbesserung im Vergleich zu dem vorherigen Verfahren bringt. Jedoch gibt es auch die Anfangswertprobleme, für die die Anwendung des neuen Verfahrens nicht viel bringt. In Kapitel~\ref{chap:auswertung} wurde gezeigt, dass die Anwendung des Prädiktor-Korrektor-Verfahrens in einer Würfelgeometrie mit den Anfangsbedeckungsgraden von 2.0 und 5.0 für die  0. Oberfläche und 0 für die anderen Oberflächen, nicht unbedingt nötig war, weil das vorherige Verfahren entweder tolerierbare Ergebnisse gab oder das neue Verfahren das Oszillationsproblem nicht lösen konnte. Es wurde festgestellt, dass das Prädiktor-Korrektor-Verfahren keinen Vorteil mehr bringt, wenn die Bedeckungsgrade der Oberflächen sich im Gleichgewicht auf eins annähren. Aus diesem Grund wurde die Anwendung des Prädiktor-Korrektor-Verfahrens in der Simulation optional gewählt. Wenn die beiden Implementierungsansätze des Prädiktor-Korrektor-Verfahrens gegenübergestellt wurde, wurde es festgestellt, dass der zweite Ansatz, in dem das Prinzip des Heunverfahrens direkt in den Code eingebaut wird, tatsächlich besser als der erste Ansatz funktioniert. Nichtsdestotrotz kann es in dem zweiten Ansatz vorkommen, dass die Simulation einfriert, weil die Simulationsergebnisse so oszillieren, dass alle Oberflächen plötzlich über einen Bedeckungsgrad von mehr als eins verfügen. Das Auftreten dieses Problems ist doch sehr unwahrscheinlich und kann mit der Erhöhung der Anzahl der simulierten Teilchen gelöst werden.
+In dieser Ingenieurpraxis wurde die Implementierung des Prädiktor-Korrektor-Verfahrens in dem Programm „ContaminationFlow“ für die Berechnung der Bedeckung erklärt. Dazu wurde hauptsächlich auf zwei verschiedenen Implementierungsansätzen eingegangen. Die Simulationsergebnisse zeigten sich, dass das Prädiktor-Korrektor-Verfahren für manche Anfangswertprobleme eine deutliche Verbesserung im Vergleich zu dem vorherigen Verfahren bringt. Jedoch gibt es auch die Anfangswertprobleme, für die die Anwendung des neuen Verfahrens nicht viel bringt. In Kapitel~\ref{chap:auswertung} wurde gezeigt, dass die Anwendung des Prädiktor-Korrektor-Verfahrens in einer Würfelgeometrie mit den Anfangsbedeckungsgraden von 2.0 und 5.0 für die  0. Oberfläche und 0 für die anderen Oberflächen, nicht unbedingt nötig war, weil das vorherige Verfahren entweder tolerierbare Ergebnisse gab oder das neue Verfahren das Oszillationsproblem nicht lösen konnte. Es wurde festgestellt, dass das Prädiktor-Korrektor-Verfahren keinen Vorteil mehr bringt, wenn die Bedeckungsgrade der Oberflächen sich im Gleichgewicht auf eins annähren. Aus diesem Grund wurde die Anwendung des Prädiktor-Korrektor-Verfahrens in der Simulation optional gewählt. Die beiden Implementierungsansätze des Prädiktor-Korrektor-Verfahrens wurden gegenübergestellt. Dabei wurde es festgestellt, dass der zweite Ansatz, in dem das Prinzip des Heunverfahrens direkt in den Code eingebaut wird, tatsächlich besser als der erste Ansatz funktioniert. Nichtsdestotrotz kann es in dem zweiten Ansatz vorkommen, dass die Simulation einfriert, weil die Simulationsergebnisse so oszillieren, dass alle Oberflächen plötzlich über einen Bedeckungsgrad von mehr als eins verfügen. Das Auftreten dieses Problems ist doch sehr unwahrscheinlich und kann mit der Erhöhung der Anzahl der simulierten Teilchen gelöst werden.
 %\paragraph{}
-Als Ausblick empfehle ich, dass das Prädiktor-Korrektor-Verfahren und das vorherige Verfahren nicht in einer sehr einfachen Würfelgeometrie, sondern in einer komplexeren Geometrie verglichen werden soll. Folglich kann deduziert werden, ob das Verfahren bei einer realistischeren Simulation immer noch ein Vorteil gegenüber dem vorherigen Verfahren bringt. Da die Simulation in einer komplexeren Geometrie ausgeführt wird, wäre es nicht einfach, die Sollwerte der Bedeckungen vorweg zu wissen, bzw. analytisch zu berechnen. Demnach wäre es vernünftig, dass die gleiche Geometrie in einem realen Experiment beobachtet wird und dabei möglichst viele 	Messwerte gesammelt wird. Außerdem kann es sein, dass die Anwendung eines Algirthmus, die zur numerischen Lösung einer Differenzialgleichung entwickelt wurde, nicht zielführend in einer ereignisgesteuerten Simulation. Aus diesem Grund soll das Algortihmus eventuell für die ereignisgesteuerten Simulationen angepasst werden.
+Als Ausblick empfehle ich, dass das Prädiktor-Korrektor-Verfahren und das vorherige Verfahren nicht in einer sehr einfachen Würfelgeometrie, sondern in einer komplexeren Geometrie verglichen werden soll. Folglich kann deduziert werden, ob das Verfahren bei einer realistischeren Simulation immer noch ein Vorteil gegenüber dem vorherigen Verfahren bringt. Da die Simulation in einer komplexeren Geometrie ausgeführt wird, wäre es nicht einfach, die Sollwerte der Bedeckungen vorweg zu wissen, bzw. analytisch zu berechnen. Demnach wäre es vernünftig, dass die gleiche Geometrie in einem realen Experiment beobachtet wird und dabei möglichst viele 	Messwerte gesammelt wird. Außerdem kann es sein, dass die Anwendung eines Algorithmus, die zur numerischen Lösung einer Differenzialgleichung entwickelt wurde, nicht zielführend in einer ereignisgesteuerten Simulation ist. Aus diesem Grund soll der Algorithmus eventuell für die ereignisgesteuerten Simulationen angepasst werden.
 
 
 % --- Bibliography
