adjusted formulas appendix

--- a/ContaminationFlow_doc/main.tex
+++ b/ContaminationFlow_doc/main.tex
@@ -32,6 +32,7 @@
                     pagebackref=true,               
                     hyperindex=true,                
                     colorlinks=true}
+\usepackage{siunitx}
 
 %\usepackage[noframe]{showframe}
 
